1 Manage KYC status as from Login,Registration and Home apis.

--- a/app/src/main/res/layout/fragment_e_k_y_c_remaining_details.xml
+++ b/app/src/main/res/layout/fragment_e_k_y_c_remaining_details.xml
@@ -49,19 +49,20 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/space_4"
                     android:text="@string/source_of_income_"
-                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvFATCA" />
 
                 <TextView
                     android:id="@+id/edtSourceIncome"
                     android:layout_width="match_parent"
-                    android:layout_height="32dp"
+                    android:layout_height="@dimen/_32sdp"
                     android:layout_marginTop="@dimen/space_4"
                     android:layout_marginEnd="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+                    android:gravity="center_vertical"
                     android:hint="@string/choose_source_of_income"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -83,19 +84,20 @@
                     android:layout_marginStart="@dimen/space_4"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/income_slab_"
-                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/edtSourceIncome" />
 
                 <TextView
                     android:id="@+id/edtIncomeSlab"
                     android:layout_width="0dp"
-                    android:layout_height="32dp"
+                    android:layout_height="@dimen/_32sdp"
                     android:layout_marginStart="@dimen/space_4"
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+                    android:gravity="center_vertical"
                     android:hint="@string/choose_income_slab"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -141,17 +143,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/nominee_name_"
-                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvNomineeDetailsl" />
 
                 <EditText
                     android:id="@+id/edtNominee"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_32sdp"
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
+                    android:gravity="center_vertical"
                     android:hint="@string/enter_nominee_name"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
@@ -173,17 +176,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/relationship_"
-                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/edtNominee" />
 
                 <EditText
                     android:id="@+id/edtRelationship"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_32sdp"
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
+                    android:gravity="center_vertical"
                     android:hint="@string/enter_relationship"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
