1 UI of design for all KYC status 2 Add bank account for Video KYC

--- a/app/src/main/res/layout/row_video_kyc_status_approved.xml
+++ b/app/src/main/res/layout/row_video_kyc_status_approved.xml
@@ -32,8 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:ellipsize="marquee"
             android:layout_marginEnd="@dimen/_4sdp"
+            android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
             android:text="@string/video_kyc_application"
@@ -49,12 +49,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/shape_failed_transn_bg"
-            android:backgroundTint="#E10F23"
+            android:backgroundTint="#3DAF6F"
             android:paddingStart="@dimen/_12sdp"
             android:paddingTop="@dimen/_4sdp"
             android:paddingEnd="@dimen/_12sdp"
             android:paddingBottom="@dimen/_4sdp"
-            android:text="@string/rejected"
+            android:text="@string/approved"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
             app:layout_constraintBaseline_toBaselineOf="@id/txtTitle"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:text="@string/your_kyc_application_was_rejected_due_to_xxx_you_will_be_able_to_resubmit_your_application_with_revised_details_after_24_48_hours"
+            android:text="@string/your_kyc_application_has_been_approved_your_tarrakki_account_will_be_activated_in_the_next_24_hours"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
