--- a/app/src/main/res/layout/row_video_kyc_status_approved.xml
+++ b/app/src/main/res/layout/row_video_kyc_status_approved.xml
@@ -91,6 +91,7 @@
             android:text="@string/complete_registration"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
+            android:visibility="@{item.btnCompleteRegistrationVisibility}"
             app:layout_constraintStart_toEndOf="@id/ivReadyToInvest"
             app:layout_constraintTop_toBottomOf="@id/tvDescription" />
 
