--- a/app/src/main/res/layout/row_video_kyc_status_pending.xml
+++ b/app/src/main/res/layout/row_video_kyc_status_pending.xml
@@ -87,11 +87,12 @@
             android:layout_marginTop="@dimen/_8sdp"
             android:background="@drawable/dr_btn_payment_bg"
             android:onClick="@{onComplete}"
-            android:text="@string/complete_registration"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
+            android:text="@string/complete_registration"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
+            android:visibility="@{item.btnCompleteRegistrationVisibility}"
             app:layout_constraintStart_toEndOf="@id/ivReadyToInvest"
             app:layout_constraintTop_toBottomOf="@id/tvDescription" />
 
