--- a/app/src/main/res/layout/fragment_ekycconfirmation.xml
+++ b/app/src/main/res/layout/fragment_ekycconfirmation.xml
@@ -32,12 +32,10 @@
                 app:layout_constraintVertical_bias="0">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_100sdp"
+                    android:layout_height="@dimen/_100sdp"
                     android:layout_gravity="center_horizontal"
                     android:adjustViewBounds="true"
-                    android:paddingStart="@dimen/_32sdp"
-                    android:paddingEnd="@dimen/_32sdp"
                     android:src="@drawable/ic_video_kyc" />
 
                 <TextView
