--- a/app/src/main/res/layout/fragment_ekycconfirmation.xml
+++ b/app/src/main/res/layout/fragment_ekycconfirmation.xml
@@ -50,12 +50,13 @@
                 android:id="@+id/tvAlert"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_16sdp"
+                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_36sdp"
+                android:layout_marginEnd="@dimen/_16sdp"
                 android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
                 android:text="@string/click_yes_and_complete_your_kyc_now"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toTopOf="@id/btnYes" />
+                app:layout_constraintTop_toBottomOf="@id/llInfo" />
 
             <Button
                 android:id="@+id/btnYes"
@@ -64,6 +65,7 @@
                 android:layout_marginStart="@dimen/_16sdp"
                 android:layout_marginEnd="@dimen/_4sdp"
                 android:layout_marginBottom="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_16sdp"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:fontFamily="@font/lato_semibold"
                 android:text="@string/yes"
@@ -72,7 +74,9 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btnNo"
                 app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvAlert"
+                app:layout_constraintVertical_bias="0.2" />
 
             <Button
                 android:id="@+id/btnNo"
@@ -81,6 +85,7 @@
                 android:layout_marginStart="@dimen/_4sdp"
                 android:layout_marginEnd="@dimen/_16sdp"
                 android:layout_marginBottom="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_16sdp"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:fontFamily="@font/lato_semibold"
                 android:text="@string/no"
@@ -89,7 +94,9 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toEndOf="@id/btnYes" />
+                app:layout_constraintStart_toEndOf="@id/btnYes"
+                app:layout_constraintTop_toBottomOf="@id/tvAlert"
+                app:layout_constraintVertical_bias="0.2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
