1 Change the app logo for Tarrakki Build. 2 Fixes some minor bugs and improve app stability.

--- a/supportcompactlibrary/src/main/res/xml/image_path.xml
+++ b/supportcompactlibrary/src/main/res/xml/image_path.xml
@@ -2,4 +2,7 @@
     <files-path
         name="captured_image"
         path="Images/" />
+    <external-path
+        name="external_files"
+        path="." />
 </paths>
