--- a/app/src/main/res/layout/fragment_performance.xml
+++ b/app/src/main/res/layout/fragment_performance.xml
@@ -242,6 +242,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:dividerV="@{null}"
+                    app:enableNestedScrollView="@{false}"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintTop_toBottomOf="@+id/tvReturn"
                     tools:itemCount="5"
