--- a/app/src/main/res/layout/row_video_kyc_status_incomplete.xml
+++ b/app/src/main/res/layout/row_video_kyc_status_incomplete.xml
@@ -92,8 +92,9 @@
             android:background="@drawable/dr_btn_payment_bg"
             android:onClick="@{onComplete}"
             android:text="@string/complete"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textAllCaps="true"
             android:textColor="@color/white"
+            android:textSize="@dimen/_8ssp"
             app:layout_constraintStart_toEndOf="@id/ivReadyToInvest"
             app:layout_constraintTop_toBottomOf="@id/tvDescription" />
 
@@ -105,11 +106,13 @@
             android:layout_marginTop="@dimen/_8sdp"
             android:background="@drawable/dr_btn_payment_bg"
             android:onClick="@{onVerifyYourPan}"
-            android:paddingStart="@dimen/_12sdp"
-            android:paddingEnd="@dimen/_12sdp"
-            android:text="@string/verify_your_pan"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:paddingStart="@dimen/_8sdp"
+            android:paddingEnd="@dimen/_8sdp"
+            android:text="@string/try_new_application"
             android:textColor="@color/white"
+            android:textSize="@dimen/_8ssp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/btnComplete"
             app:layout_constraintTop_toBottomOf="@id/tvDescription" />
 
