--- a/app/src/main/res/drawable/dr_vertical_dotted_line.xml
+++ b/app/src/main/res/drawable/dr_vertical_dotted_line.xml
@@ -2,13 +2,12 @@
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
     android:fromDegrees="90"
     android:toDegrees="90">
-    <shape
-        android:shape="line">
+    <shape android:shape="line">
 
         <stroke
+            android:width="1dp"
             android:color="@color/darker_gray"
             android:dashWidth="4dp"
-            android:dashGap="4dp"
-            android:width="1dp"/>
+            android:dashGap="4dp" />
     </shape>
 </rotate>
