--- a/app/src/main/res/drawable/slider_unselected_bg.xml
+++ b/app/src/main/res/drawable/slider_unselected_bg.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/white" />
     <stroke
         android:width="@dimen/space_1"
-        android:color="@color/colorAccent" />
+        android:color="@color/darker_gray" />
     <corners android:radius="24dp" />
 </shape>
