--- a/app/src/main/res/layout/fragment_assessment_q.xml
+++ b/app/src/main/res/layout/fragment_assessment_q.xml
@@ -16,13 +16,69 @@
         android:layout_height="match_parent"
         tools:context=".module.risk_assesment.AssessmentQFragment">
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvQuestions"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:enableNestedScrollView="@{false}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            android:orientation="vertical"
+            android:padding="@dimen/_16sdp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_cart_view"
+                android:elevation="2dp"
+                android:padding="@dimen/_8sdp">
+
+                <TextView
+                    android:id="@+id/tvQIndex"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="5/10 Question"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvQuestion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="What are the current income sources?"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toBottomOf="@id/tvQIndex" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvQuestions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    app:enableNestedScrollView="@{false}"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintTop_toBottomOf="@id/tvQuestion" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <Button
+                android:id="@+id/btnContinue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="@dimen/default_space"
+                android:layout_marginTop="@dimen/_16sdp"
+                android:layout_marginEnd="@dimen/default_space"
+                android:background="@drawable/shape_btn_idle_bg"
+                android:drawableEnd="@drawable/ic_arrow_forward_white_24dp"
+                android:drawablePadding="@dimen/_4sdp"
+                android:fontFamily="@font/lato_bold"
+                android:paddingStart="@dimen/_16sdp"
+                android:paddingEnd="@dimen/_8sdp"
+                android:text="@string/txtcontinue"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 </layout>
