--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -308,9 +308,10 @@
                         android:layout_height="wrap_content"
                         android:drawableEnd="@{vm.whayTarrakki ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
                         android:fontFamily="@font/lato_semibold"
-                        android:text="@string/why_tarrakki"
+                        android:text="@{vm.isTarrakki()?@string/why_tarrakki:@string/why_rural_invest}"
                         android:textColor="@android:color/black"
-                        tools:drawableEnd="@drawable/ic_arrow_up" />
+                        tools:drawableEnd="@drawable/ic_arrow_up"
+                        tools:text="@string/why_rural_invest" />
 
                     <net.cachapa.expandablelayout.ExpandableLayout
                         android:layout_width="wrap_content"
@@ -324,7 +325,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="@string/why_tarrakki_info" />
+                            android:text="@{vm.isTarrakki()?@string/why_tarrakki_info:@string/why_rural_invest_info}"
+                            tools:text="@string/why_rural_invest_info" />
 
                     </net.cachapa.expandablelayout.ExpandableLayout>
 
