--- a/app/src/main/res/layout/fragment_assessment_q.xml
+++ b/app/src/main/res/layout/fragment_assessment_q.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/tvQIndex"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="5/10 Question"
+                    android:text="@{vm.questionNo}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="What are the current income sources?"
+                    android:text="@{vm.question}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/black"
                     app:layout_constraintTop_toBottomOf="@id/tvQIndex" />
@@ -56,7 +56,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
                     app:enableNestedScrollView="@{false}"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintTop_toBottomOf="@id/tvQuestion" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
