--- a/app/src/main/res/layout/row_risk_assessment_slider_item_start.xml
+++ b/app/src/main/res/layout/row_risk_assessment_slider_item_start.xml
@@ -9,73 +9,170 @@
 
         <variable
             name="item"
-            type="com.tarrakki.module.risk_assesment.SliderItem" />
+            type="com.tarrakki.api.model.RiskAssessmentQuestionsApiResponse.Data.Option" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="wrap_content"
-            android:background="@{item.selected?@drawable/dr_btn_payment_bg:@drawable/slider_unselected_bg}"
-            android:elevation="2dp"
-            android:gravity="center"
-            android:paddingStart="@dimen/_16sdp"
+        <LinearLayout
+            android:id="@+id/lyttitle"
+            android:layout_marginEnd="@dimen/_16sdp"
             android:paddingTop="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_16sdp"
             android:paddingBottom="@dimen/_8sdp"
-            android:text="@{item.label}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@{item.selected?@color/white:@color/semi_black}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:background="@drawable/dr_btn_payment_bg"
-            tools:text="15000 - 30000"
-            tools:textColor="@color/white" />
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/lytData"
+            android:layout_height="wrap_content">
 
-        <View
-            android:id="@+id/mDividerH"
-            android:layout_width="@dimen/_8sdp"
-            android:layout_height="2dp"
-            android:background="@color/darker_gray"
-            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
-            app:layout_constraintEnd_toStartOf="@id/mDividerV"
-            app:layout_constraintTop_toTopOf="@id/tvTitle" />
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@{item.isSelected?@drawable/dr_btn_payment_bg:@drawable/slider_unselected_bg}"
+                android:elevation="2dp"
+                android:gravity="center"
+                android:paddingStart="@dimen/_16sdp"
+                android:paddingTop="@dimen/_8sdp"
+                android:paddingEnd="@dimen/_16sdp"
+                android:paddingBottom="@dimen/_8sdp"
+                android:text="@{item.optionValue}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@{item.isSelected?@color/white:@color/semi_black}"
+                tools:background="@drawable/dr_btn_payment_bg"
+                tools:text="15000 - 30000"
+                tools:textColor="@color/white" />
+        </LinearLayout>
 
-        <View
-            android:id="@+id/mDividerV"
-            android:layout_width="2dp"
-            android:layout_height="@dimen/_48sdp"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:background="@{item.movedOver?@color/color_light_violet:@color/darker_gray}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tvTitle"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:background="@color/color_light_violet" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/lytData"
+            android:layout_alignTop="@id/lyttitle"
+            android:layout_alignBottom="@id/lyttitle"
+            android:layout_alignParentEnd="true"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <View
-            android:layout_width="2dp"
-            android:layout_height="0sp"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:background="@color/color_light_violet"
-            android:visibility="@{item.selected?View.VISIBLE:View.GONE}"
-            app:layout_constraintBottom_toBottomOf="@id/ivThumb"
-            app:layout_constraintStart_toEndOf="@id/tvTitle"
-            app:layout_constraintTop_toTopOf="parent" />
+            <RelativeLayout
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/ivThumb"
-            android:layout_width="@dimen/_12sdp"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/ic_thumb"
-            android:visibility="@{item.selected?View.VISIBLE:View.GONE}"
-            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
-            app:layout_constraintEnd_toEndOf="@id/mDividerV"
-            app:layout_constraintTop_toTopOf="@id/tvTitle" />
+                <View
+                    android:layout_centerVertical="true"
+                    tools:visibility="visible"
+                    android:layout_width="@dimen/_8sdp"
+                    android:layout_height="2dp"
+                    android:background="@color/darker_gray"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:layout_centerVertical="true"
+                    tools:visibility="visible"
+                    android:layout_width="@dimen/_12sdp"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_thumb"
+                    android:visibility="@{item.isSelected?View.VISIBLE:View.GONE}"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:visibility="@{item.isMovedOver? View.VISIBLE:View.GONE}"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <View
+                        android:layout_weight="1.5"
+                        android:layout_width="2dp"
+                        android:layout_height="0dp"
+                        android:background="@color/color_light_violet"
+                        tools:background="@color/color_light_violet" />
+
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="0dp"
+                        android:background="@color/color_light_violet"
+                        android:layout_weight="1"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:visibility="@{item.isSelected? View.VISIBLE:View.GONE}"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <View
+                        android:layout_weight="1.5"
+                        android:layout_width="2dp"
+                        android:layout_height="0dp"
+                        android:background="@color/color_light_violet"
+                        tools:background="@color/color_light_violet" />
+
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="0dp"
+                        android:background="@color/darker_gray"
+                        android:layout_weight="1"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:visibility="@{item.isSelected &amp;&amp; item.isMovedOver ? View.VISIBLE:View.GONE}"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <View
+                        android:layout_weight="1.5"
+                        android:layout_width="2dp"
+                        android:layout_height="0dp"
+                        android:background="@color/color_light_violet"
+                        tools:background="@color/color_light_violet" />
+
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="0dp"
+                        android:background="@color/color_light_violet"
+                        android:layout_weight="1"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:visibility="@{!item.isSelected &amp;&amp; !item.isMovedOver ? View.VISIBLE:View.GONE}"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <View
+                        android:layout_weight="1.5"
+                        android:id="@+id/mDividerV"
+                        android:layout_width="2dp"
+                        android:layout_height="0dp"
+                        android:background="@color/darker_gray"
+                        tools:background="@color/color_light_violet" />
+
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="0dp"
+                        android:background="@color/darker_gray"
+                        android:layout_weight="1"/>
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </RelativeLayout>
+
 </layout>
